--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
   text-align: center;
+	margin: 0em auto 2em;
+	max-width: 55em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.container {
+  display: inline-block;
+  margin: 7em;
+  padding: 0.5rem;
+  padding-bottom: 5em;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  border: 0.01em solid rgba(0, 0, 0, 0.438);
+  border-radius: 1em;
+  box-shadow: 5px 7px 18px 5px rgb(31, 30, 30);
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-image: -moz-linear-gradient(to bottom left,
+  #282c34ce,
+  rgba(8, 8, 8, 0.24)
+  );
 }
