--- a/src/components/InputForm.css
+++ b/src/components/InputForm.css
@@ -21,6 +21,7 @@
       padding: 0.7em;
       margin-bottom: 0.7em;
       box-shadow: 0.5px 0.5px 10px 0.5px black;
+      text-align: center;
   }
   
   .button {
