--- a/src/views/Home.css
+++ b/src/views/Home.css
@@ -11,6 +11,7 @@
     border-radius: 0.75rem;
 }
 
+
 .home a {
     color: white;
     font-size: 15px;
@@ -23,14 +24,17 @@
     text-decoration: underline;
   }
   
+.home h2 {
+  margin-top: 2em;
+}
+
   .home p {
-    justify-content: center;
-    margin-top: 1.5em;
-    padding: 1em;
-    font-size: 24px;
+    margin: 0 auto; 
+    margin-top: 1em;
+    padding:1em;
+    font-size: 18px;
   }
   
   .home small {
-    font-size: 15px;
-    margin: 1em;
+    font-size: 17px;
   }
