--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 .App {
   text-align: center;
 	margin: 0em auto 2em;
-	max-width: 55em;
+  max-width: 700px;
 }
 
-
 .container {
-  display: inline-block;
-  margin: 7em;
+  max-width: 700px;
+  margin: 5%;
   padding: 0.5rem;
   padding-bottom: 5em;
 
