--- a/src/components/TheNavigation.css
+++ b/src/components/TheNavigation.css
@@ -1,10 +1,124 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+nav {
+  margin: 0 auto;
+  padding: 2em 0;
+  border-bottom: 0.01em solid grey;
 }
 
-.navigation {
+@media only screen and (max-width: 540px) {
+  nav ul {
+    width: 33%;
+    margin: auto;
+    padding: 0;
+  }
+
+  .login {
+    position: relative;
+    margin-top: 1em;
+    right: 1em;
+  }
+
+  .register {
+    position: relative;
+    margin-top: 1em;
+    right: 1em;
+  }
+
+  .logo {
+    position: relative;
+    left: 0.1em;
+  }
+}
+
+nav ul {
+  list-style: none;
+  text-align: center;
+}
+nav ul li {	
+  display: inline-block;
+}
+nav ul li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  font-weight: 800;
+  text-transform: uppercase;
+  margin: 0 10px;
+}
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+  transition: all 0.5s;
+}
+nav ul li a:hover {
+  color: gold;
+}
+
+nav.navigation ul li a {
+  position: relative;
+}
+nav.navigation ul li a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: ".";
+  color: transparent;
+  background: gold;
+  height: 1px;
+}
+nav.navigation ul li a:hover:after {
+  width: 100%;
+}
+
+nav.navigation a.active {
+  color: gold;
+}
+
+.logo {
+  width: 3rem;
+  position: relative;
+  top: 0.7em;
+  right: 2.5em;
+}
+
+.login {
+  position: relative;
+  float: right;
+  bottom: 25px;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+}
+
+.register {
+  position: relative;
+  float: right;
+  bottom: 25px;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+  margin-left: 1em;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/* .navigation {
     display: inline-block;
     margin: 0em auto 2em;
     padding: 1.5em 2.5em;
@@ -19,30 +133,6 @@
 
     display: inline-block;
     padding: 0.6em 1em;
-}
+} */
 
-.navigation a.active {
-  color: gold;
-}
 
-.logo {
-    width: 3rem;
-    position: relative;
-    top: 0.7em;
-    right: 2.5em;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-
-@keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
