--- a/src/views/Contact.css
+++ b/src/views/Contact.css
@@ -1,8 +1,7 @@
 .contact {
-  min-width: 700px;
-  margin-top: 5em;
+  max-width: 700px;
+  margin-top: 4em;
   text-align: left;
-  margin-left: 4em;
 }
 
 .phone,
@@ -13,17 +12,34 @@
 .phone img,
 .email img {
   width: 2.5em;
+  padding-left: 6em;
 }
 
 .phone p,
 .email p {
+  padding-left: 10em;
+  margin: 0.5em auto;
+  bottom: 3em;
   position: relative;
-  left: 4em;
-  bottom: 2em;
-  padding: 0;
 }
 
 .email a {
   text-decoration: none;
   color: white;
+}
+
+@media only screen and (max-width: 540px) {
+  .phone img,
+  .email img {
+    width: 2.5em;
+    padding-left: 4em;
+  }
+
+  .phone p,
+  .email p {
+    padding-left: 8em;
+    margin: 0.5em auto;
+    bottom: 3em;
+    position: relative;
+  }
 }
